
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_9__ TYPE_2__ ;
typedef struct TYPE_8__ TYPE_1__ ;


typedef int jobject ;
typedef int jint ;
typedef int fz_rect ;
typedef int fz_matrix ;
struct TYPE_8__ {int self; TYPE_2__** env; } ;
typedef TYPE_1__ fz_java_device ;
typedef int fz_device ;
typedef int fz_context ;
struct TYPE_9__ {int (* CallIntMethod ) (TYPE_2__**,int ,int ,int ,int ,float,float,int ,int ) ;scalar_t__ (* ExceptionCheck ) (TYPE_2__**) ;} ;
typedef TYPE_2__* JNIEnv ;


 int fz_throw_java (int *,TYPE_2__**) ;
 int mid_Device_beginTile ;
 int stub1 (TYPE_2__**,int ,int ,int ,int ,float,float,int ,int ) ;
 scalar_t__ stub2 (TYPE_2__**) ;
 int to_Matrix (int *,TYPE_2__**,int ) ;
 int to_Rect (int *,TYPE_2__**,int ) ;

__attribute__((used)) static int
fz_java_device_begin_tile(fz_context *ctx, fz_device *dev, fz_rect area, fz_rect view, float xstep, float ystep, fz_matrix ctm, int id)
{
 fz_java_device *jdev = (fz_java_device *)dev;
 JNIEnv *env = jdev->env;
 jobject jarea = to_Rect(ctx, env, area);
 jobject jview = to_Rect(ctx, env, view);
 jobject jctm = to_Matrix(ctx, env, ctm);
 int res;

 res = (*env)->CallIntMethod(env, jdev->self, mid_Device_beginTile, jarea, jview, xstep, ystep, jctm, (jint)id);
 if ((*env)->ExceptionCheck(env))
  fz_throw_java(ctx, env);

 return res;
}
