; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/platform/java/extr_mupdf_native.c_fz_java_device_begin_tile.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/platform/java/extr_mupdf_native.c_fz_java_device_begin_tile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32, %struct.TYPE_9__** }
%struct.TYPE_9__ = type { i32 (%struct.TYPE_9__**, i32, i32, i32, i32, float, float, i32, i32)*, i64 (%struct.TYPE_9__**)* }

@mid_Device_beginTile = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32, i32, float, float, i32, i32)* @fz_java_device_begin_tile to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fz_java_device_begin_tile(i32* %0, i32* %1, i32 %2, i32 %3, float %4, float %5, i32 %6, i32 %7) #0 {
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca float, align 4
  %14 = alloca float, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca %struct.TYPE_8__*, align 8
  %18 = alloca %struct.TYPE_9__**, align 8
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  store i32* %0, i32** %9, align 8
  store i32* %1, i32** %10, align 8
  store i32 %2, i32* %11, align 4
  store i32 %3, i32* %12, align 4
  store float %4, float* %13, align 4
  store float %5, float* %14, align 4
  store i32 %6, i32* %15, align 4
  store i32 %7, i32* %16, align 4
  %23 = load i32*, i32** %10, align 8
  %24 = bitcast i32* %23 to %struct.TYPE_8__*
  store %struct.TYPE_8__* %24, %struct.TYPE_8__** %17, align 8
  %25 = load %struct.TYPE_8__*, %struct.TYPE_8__** %17, align 8
  %26 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %25, i32 0, i32 1
  %27 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %26, align 8
  store %struct.TYPE_9__** %27, %struct.TYPE_9__*** %18, align 8
  %28 = load i32*, i32** %9, align 8
  %29 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %18, align 8
  %30 = load i32, i32* %11, align 4
  %31 = call i32 @to_Rect(i32* %28, %struct.TYPE_9__** %29, i32 %30)
  store i32 %31, i32* %19, align 4
  %32 = load i32*, i32** %9, align 8
  %33 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %18, align 8
  %34 = load i32, i32* %12, align 4
  %35 = call i32 @to_Rect(i32* %32, %struct.TYPE_9__** %33, i32 %34)
  store i32 %35, i32* %20, align 4
  %36 = load i32*, i32** %9, align 8
  %37 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %18, align 8
  %38 = load i32, i32* %15, align 4
  %39 = call i32 @to_Matrix(i32* %36, %struct.TYPE_9__** %37, i32 %38)
  store i32 %39, i32* %21, align 4
  %40 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %18, align 8
  %41 = load %struct.TYPE_9__*, %struct.TYPE_9__** %40, align 8
  %42 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %41, i32 0, i32 0
  %43 = load i32 (%struct.TYPE_9__**, i32, i32, i32, i32, float, float, i32, i32)*, i32 (%struct.TYPE_9__**, i32, i32, i32, i32, float, float, i32, i32)** %42, align 8
  %44 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %18, align 8
  %45 = load %struct.TYPE_8__*, %struct.TYPE_8__** %17, align 8
  %46 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %45, i32 0, i32 0
  %47 = load i32, i32* %46, align 8
  %48 = load i32, i32* @mid_Device_beginTile, align 4
  %49 = load i32, i32* %19, align 4
  %50 = load i32, i32* %20, align 4
  %51 = load float, float* %13, align 4
  %52 = load float, float* %14, align 4
  %53 = load i32, i32* %21, align 4
  %54 = load i32, i32* %16, align 4
  %55 = call i32 %43(%struct.TYPE_9__** %44, i32 %47, i32 %48, i32 %49, i32 %50, float %51, float %52, i32 %53, i32 %54)
  store i32 %55, i32* %22, align 4
  %56 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %18, align 8
  %57 = load %struct.TYPE_9__*, %struct.TYPE_9__** %56, align 8
  %58 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %57, i32 0, i32 1
  %59 = load i64 (%struct.TYPE_9__**)*, i64 (%struct.TYPE_9__**)** %58, align 8
  %60 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %18, align 8
  %61 = call i64 %59(%struct.TYPE_9__** %60)
  %62 = icmp ne i64 %61, 0
  br i1 %62, label %63, label %67

63:                                               ; preds = %8
  %64 = load i32*, i32** %9, align 8
  %65 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %18, align 8
  %66 = call i32 @fz_throw_java(i32* %64, %struct.TYPE_9__** %65)
  br label %67

67:                                               ; preds = %63, %8
  %68 = load i32, i32* %22, align 4
  ret i32 %68
}

declare dso_local i32 @to_Rect(i32*, %struct.TYPE_9__**, i32) #1

declare dso_local i32 @to_Matrix(i32*, %struct.TYPE_9__**, i32) #1

declare dso_local i32 @fz_throw_java(i32*, %struct.TYPE_9__**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
